Hiding overflow to fix odd hort scrollbar appearing.

--- a/styles/Outline.module.css
+++ b/styles/Outline.module.css
@@ -5,6 +5,7 @@
 
 .item {
   padding-left: 2em;
+  overflow-x: hidden;
 }
 
 .itemRow {
